Manque la validation

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "WebApiServer": "",
+  "WebApiServer": "http://localhost:53544/",
   "ConnectionStrings": {
     "BlogDBConnection": "server=DESKTOP-UAT2GRF\\SQLEXPRESS; database=BlogueDB;UID=sa;Trusted_Connection=True;"
   }
